--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2033,7 +2033,7 @@
           "1578476007695": {
             "type": "section_background",
             "settings": {
-              "section_bg_color": "#303030"
+              "section_bg_color": "#f6f7f8"
             }
           },
           "1578476023173": {
